<resources>
    <string name="app_name">Git Search</string>
    <string name="btn1">Sign in with Google</string>
    <string name="btn2">Sign in with GitHub</string>
    <string name="repo_label">Repositories</string>
    <string name="dash_intro">Hello TrekHub</string>
    <string name="dash_info">Search for Your Favourite Github Users</string>
    <string name="hintText">Username</string>
    <string name="search">Search</string>
    <string name="notificationsPageLabel">Notifications</string>
    <string name="user_profile">User Profile</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="gists">Gists</string>
    <string name="repo">Repositories</string>
    <string name="repositories">Repositories</string>
    <string name="repo_desc">This is the repo description</string>
    <string name="image">image</string>
    <string name="repoValue">32</string>
    <string name="followersValue">32</string>
    <string name="followingValue">32</string>
    <string name="gistValue">32</string>


</resources>