<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="140dp"
        android:gravity="center_vertical"
        android:src="@drawable/logo2" />





    <TextView
        android:id="@+id/logo_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


    <Button
        android:id="@+id/gitBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/btn2"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:id="@+id/googleBtn"
        android:layout_height="50dp"
        android:layout_above="@+id/gitBtn"
        android:background="@drawable/btn"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/btn1"
        android:textColor="@color/white"
        android:textStyle="bold"/>


</RelativeLayout>