<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DashBoard">

    <ImageView
        android:id="@+id/logo_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="3dp"
        android:src="@drawable/ic_github" />



    <ImageView
        android:id="@+id/notification_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@id/user_icon"
        android:src="@drawable/ic_notification" />

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_user" />

<!--    <RelativeLayout-->
<!--        android:id="@+id/myRectangleView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="200dp"-->
<!--        android:layout_below="@+id/logo_icon"-->
<!--        android:layout_margin="20dp"-->
<!--        android:background="@drawable/rectangle">-->

<!--    </RelativeLayout>-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dash_intro"
        android:layout_marginTop="30dp"
        android:layout_below="@id/user_icon"
        android:layout_marginStart="20dp"
        android:text="@string/dash_intro"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/dash_info"
        android:layout_below="@id/dash_intro"
        android:layout_marginStart="20dp"
        android:text="@string/dash_info"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/user_search"
        android:layout_width="228dp"
        android:layout_height="50dp"
        android:layout_below="@id/dash_info"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@id/search_btn"
        android:background="#efefef"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="8dp"

        android:hint="@string/hintText"
        android:padding="8dp"
        android:textColor="#474d57"
        android:textColorHint="#474d57" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="123dp"
        android:layout_height="60dp"
        android:layout_below="@id/dash_info"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="10dp"
        android:text="@string/search"
        android:textColor="@color/white" />





</RelativeLayout>